--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+## PostgresSQL
+spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Wilidon/fita
+spring.datasource.username=admin
+spring.datasource.password=v2_43Wip_e9vHqRDXD3LdqJq7B888xcx
 
+## SpringDataJPA
+#drop and create table again
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
