--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## PostgresSQL
-spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Wilidon/fita
-spring.datasource.username=admin
-spring.datasource.password=v2_43Wip_e9vHqRDXD3LdqJq7B888xcx
+spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Wilidon/pianino
+spring.datasource.username=appAccount
+spring.datasource.password=v2_43Wjd_xmeANkYHxaHxjsz7QQ96Rv4
 
 ## SpringDataJPA
 #drop and create table again
