--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-## PostgresSQL
-spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Wilidon/pianino
-spring.datasource.username=appAccount
-spring.datasource.password=v2_43Wjd_xmeANkYHxaHxjsz7QQ96Rv4
+## PSQL
+spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Findcs/trial
+spring.datasource.username=Findcs
+spring.datasource.password=v2_43WmU_hkCdm4jTJBcU4unuLXQniAv
 
 ## SpringDataJPA
 #drop and create table again
