--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-## PSQL
-spring.datasource.url=jdbc:postgresql://db.bit.io:5432/Findcs/trial
-spring.datasource.username=Findcs
-spring.datasource.password=v2_43WmU_hkCdm4jTJBcU4unuLXQniAv
+## PostgresSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/constr
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 ## SpringDataJPA
 #drop and create table again
