--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ## PostgresSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/constr
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/test2
+spring.datasource.username=ildar
+spring.datasource.password=0990
+
 
 ## SpringDataJPA
 #drop and create table again
